gofmt, sass compile, lib updates: mobile horizontal scroll fix

--- a/cyph.im/css/cyph.css
+++ b/cyph.im/css/cyph.css
@@ -1,3 +1,7 @@
+html, body {
+  max-width: 100%;
+  overflow-x: hidden; }
+
 body, #loading, md-sidenav {
   background-color: #8b62d9 !important; }
 
